AKS/yaml/demo-ns/service-external-lb-dualstack.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-external
  namespace: demo-ns
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  ipFamilyPolicy: RequireDualStack
  ipFamilies:
    - IPv4
    - IPv6
