AKS/yaml/demo-ns/service-external-lb-multinodepool.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-mynodepool
  namespace: demo-ns-mynodepool
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
