AKS/yaml/demo-ns/service-external-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-external
  namespace: demo-ns
spec:
  type: LoadBalancer
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
