AKS/yaml/demo-ns/service-internal-lb-dualstack.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service-internal
  namespace: demo-ns
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
spec:
  type: LoadBalancer
  ipFamilyPolicy: RequireDualStack
  ipFamilies:
    - IPv6
    - IPv4
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
